# url-shortener

./: Cargo.toml  README.md  cliff.toml  test.rest
migrations/: 20240603083805_init_table.sql
src/: lib.rs  main.rs
src/handlers/: url.rs
