[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
axum-macros = "0.4.1"
nanoid = "0.4.0"
serde = "1.0.203"
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
